--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./fish_game/fish_game.css">
-    <title>Document</title>
+    <title>Fish Game</title>
 </head>
 <body>
     <canvas id="main-canvas"></canvas>
